force-app/main/default/objects/KuniEmployeeExpense__c/KuniEmployeeExpense__c.object-meta.xml
<CustomObject>
    <label>KuniEmployeeExpense</label>
    <nameField>
        <label>KuniEmployeeExpense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KuniEmployeeExpenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>