force-app/main/default/objects/KuniEmployeeExpense__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>KuniEmployee</label>
    <referenceTo>KuniEmployee__c</referenceTo>
    <relationshipLabel>KuniEmployeeExpenses</relationshipLabel>
    <relationshipName>KuniEmployeeExpenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>