force-app/main/default/objects/KuniEmployeeExpense__c/fields/ExpenseAmount__c.field-meta.xml
<CustomField>
    <fullName>ExpenseAmount__c</fullName>
    <label>ExpenseAmount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>