force-app/main/default/objects/KuniEmployeeExpense__c/fields/ExpenseType__c.field-meta.xml
<CustomField>
    <fullName>ExpenseType__c</fullName>
    <label>ExpenseType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ENTERTAINMENT</fullName>
            </value>
            <value>
                <fullName>FOOD</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>PARKING</fullName>
            </value>
            <value>
                <fullName>TRAVEL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>