force-app/main/default/objects/KuniEmployeeExpense__c/fields/TripName__c.field-meta.xml
<CustomField>
    <fullName>TripName__c</fullName>
    <label>TripName</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>